frontend/src/App.css
#root {
  height: 100vh;
  width: 100vw;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

.shloka-box {
  width: 100%;
  height: 60%;
  font-family: 'Noto Sans Devanagari', 'Mangal', 'Kokila', 'Lohit Devanagari', 'Arial Unicode MS', sans-serif;
  font-weight: 500;
  font-size: 1.2rem;
  background-color: #EDE7F6;
  color: #4A4A6A;
  overflow-y: auto;
  padding: 8px;
  white-space: nowrap;
  box-sizing: border-box;
}

@media (prefers-color-scheme: dark) {
  .shloka-box {
    background-color: #322B3B;
    color: #F4F4F4;
  }
}


.meaning-box {
  width: 100%;
  height: 40%;
  font-family: 'Noto Sans Devanagari', 'Mangal', 'Kokila', 'Lohit Devanagari', 'Arial Unicode MS', sans-serif;
  background-color: #FCFCFF;
  color: #4A4A6A;
  padding-top: 16px;
  padding-left: 16px;
  box-sizing: border-box;
  box-shadow: 0 -4px 16px 0 #7b68ee80;
}

@media (prefers-color-scheme: dark) {
  .meaning-box {
    background-color: #1A1A2E; 
    box-shadow: 0 -4px 16px 0 #9370db80; 
    color: #F4F4F4;
  }
}

.highlight-word {
  background-color: #FCFCFF;
  color: #4A4A6A;
  box-shadow: 0 4px 12px 0 #7b68ee80;
}

@media (prefers-color-scheme: dark) {
  .highlight-word {
    background-color: #1A1A2E; /* dark mode color */
    color: #F4F4F4;           /* adjust text if needed */
    box-shadow: 0 4px 12px 0 #9370db80;
  }
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}

